--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 <body>
 <header>
 <div class="statusbar">
+  <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Status%20Bar.png">
 </div>
 <nav> 
 <span class="back-arrow">
+  <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Back%20Button.png">
 </span>
 </nav>
+  <span class="map">
+    <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Washington%20and%20State%203.png">
+  </span>
 </header>
 </body>
 </html>
