--- a/index.html
+++ b/index.html
@@ -5,17 +5,73 @@
 </head>
 <body>
 <header>
-<div class="statusbar">
+  <nav> 
+  <div class="statusbar">
   <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Status%20Bar.png">
-</div>
-<nav> 
-<span class="back-arrow">
+  </div>
+  <div class="back-arrow">
   <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Back%20Button.png">
-</span>
-</nav>
-  <span class="map">
+  </div>
+  <div class="map">
     <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Washington%20and%20State%203.png">
-  </span>
+  </div>
+  </nav>
 </header>
+  <section class="container">
+    <nav>
+    <div class="segmented-controls">
+      <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/2%20Segments.png">
+    </div>
+    </nav>
+  <section class="bus-list">
+    <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp;60</li>
+          <li class="col1">Eastbound</li>
+          <li class="col1-2">Randolph/Harbor Dr </li>
+        </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
+         <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">124</li>
+          <li class="col1">Eastbound/Southbound</li>
+          <li class="col1-2">Navy Pier</li>
+        </ul>
+          <img class="forwardarrow" src="forwardarrow.png">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">151</li>
+          <li class="col1">Northbound</li>
+          <li class="col1-2">Devon/Clark</li>
+      </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">J14</li>
+          <li class="col1">Southbound</li>
+          <li class="col1-2">103rd/Stony Island</li>
+      </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp;6x</li>
+          <li class="col1">Reroute</li>
+          <li class="col1-2">Jackson Park Express</li>
+      </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp; 4</li>
+          <li class="col1"><span class="red">Out Of Service</span></li>
+          <li class="col1-2">Cottage Grove</li>
+      </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp;20</li>
+          <li class="col1"><span class="red">Out Of Service</span></li>
+          <li class="col1-2">Madison</li>
+      </ul>
+          <img class="forwardarrow" src="forwardarrow.png" alt="forward chevron for more options">
 </body>
 </html>
