--- a/index.html
+++ b/index.html
@@ -21,57 +21,66 @@
     <nav>
     <div class="segmented-controls">
       <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/2%20Segments.png">
+      <h6>Stops</h6>
+      <h6>Lines</h6>
     </div>
     </nav>
   <section class="bus-list">
     <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">&nbsp;60</li>
-          <li class="col1">Eastbound</li>
           <li class="col1-2">Randolph/Harbor Dr </li>
+          <li class="col1">Eastbound</li>
         </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
          <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">124</li>
-          <li class="col1">Eastbound/Southbound</li>
           <li class="col1-2">Navy Pier</li>
+          <li class="col1">Eastbound/Southbound</li>
         </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
       <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">151</li>
-          <li class="col1">Northbound</li>
           <li class="col1-2">Devon/Clark</li>
+          <li class="col1">Northbound</li> 
       </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
       <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">J14</li>
-          <li class="col1">Southbound</li>
           <li class="col1-2">103rd/Stony Island</li>
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-      <ul class="container2">
-          <li class="shape"></li>
-          <li class="busnumber">&nbsp;6x</li>
-          <li class="col1">Reroute</li>
-          <li class="col1-2">Jackson Park Express</li>
+          <li class="col1">Southbound</li>
       </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
       <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">&nbsp; 4</li>
-          <li class="col1"><span class="red">Out Of Service</span></li>
           <li class="col1-2">Cottage Grove</li>
+          <li class="col1"><span class="red">Out Of Service until 12:10 AM</span></li>       
       </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
       <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber">&nbsp;20</li>
-          <li class="col1"><span class="red">Out Of Service</span></li>
           <li class="col1-2">Madison</li>
+          <li class="col1"><span class="red">Out Of Service until 12:10 AM</span></li>
       </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-</body>
+       <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp;20</li>
+          <li class="col1-2">Streeterville/Taylor</li>
+          <li class="col1"><span class="red">Out Of Service until 6:00 AM</span></li>
+      </ul>
+          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+      <ul class="container2">
+          <li class="shape"></li>
+          <li class="busnumber">&nbsp;6x</li>
+          <li class="col1-2">Jackson Park Express</li>
+          <li class="col1">Rerouted</li>
+      </ul>
+          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+    </body>
 </html>
