--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   <section class="bus-list">
     <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">&nbsp;60</li>
-          <li class="col1-2">Randolph/Harbor Dr </li>
-          <li class="col1">Eastbound</li>
+          <li class="busnumber"><h1>60</h1></li>
+          <li class="col1-2"><h3>Randolph/Harbor Dr<h3></li>
+          <li class="col1"><h4>Eastbound</h4></li>
         </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
          <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">124</li>
-          <li class="col1-2">Navy Pier</li>
-          <li class="col1">Eastbound/Southbound</li>
+          <li class="busnumber"><h1>124</h1></li>
+           <li class="col1-2"><h3>Navy Pier</h3></li>
+           <li class="col1"><h4>Eastbound/Southbound</h4></li>
         </ul>
           <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
       <ul class="container2">
