--- a/index.html
+++ b/index.html
@@ -3,84 +3,84 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body>
-<header>
-  <nav> 
-  <div class="statusbar">
-  <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Status%20Bar.png">
-  </div>
-  <div class="back-arrow">
-  <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Back%20Button.png">
-  </div>
-  <div class="map">
-    <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Washington%20and%20State%203.png">
-  </div>
-  </nav>
-</header>
-  <section class="container">
-    <nav>
-    <div class="segmented-controls">
-      <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/2%20Segments.png">
-      <h6>Stops</h6>
-      <h6>Lines</h6>
-    </div>
-    </nav>
-  <section class="bus-list">
-    <ul class="container2">
+  <body>
+    <header>
+      <nav>
+        <div class="statusbar">
+          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Status%20Bar.png">
+        </div>
+        <div class="back-arrow">
+          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Back%20Button.png">
+        </div>
+        <div class="map">
+          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Washington%20and%20State%203.png">
+        </div>
+      </nav>
+    </header>
+    <section class="container">
+      <nav>
+        <div class="segmented-controls">
+          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/2%20Segments.png">
+          <h6>Stops</h6>
+          <h6>Lines</h6>
+        </div>
+      </nav>
+      <section class="bus-list">
+        <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber"><h1>60</h1></li>
-          <li class="col1-2"><h3>Randolph/Harbor Dr<h3></li>
+          <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
           <li class="col1"><h4>Eastbound</h4></li>
         </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-         <ul class="container2">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
           <li class="busnumber"><h1>124</h1></li>
-           <li class="col1-2"><h3>Navy Pier</h3></li>
-           <li class="col1"><h4>Eastbound/Southbound</h4></li>
+          <li class="col1-2"><h3>Navy Pier</h3></li>
+          <li class="col1"><h4>Eastbound/Southbound</h4></li>
         </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
-      <ul class="container2">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">151</li>
-          <li class="col1-2">Devon/Clark</li>
-          <li class="col1">Northbound</li> 
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-      <ul class="container2">
+          <li class="busnumber"><h1>151</h1></li>
+          <li class="col1-2"><h3>Devon/Clark</h3></li>
+          <li class="col1"><h4>Northbound</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">J14</li>
-          <li class="col1-2">103rd/Stony Island</li>
-          <li class="col1">Southbound</li>
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-      <ul class="container2">
+          <li class="busnumber"><h1>J14</h1></li>
+          <li class="col1-2"><h3>103rd/Stony Island</h3></li>
+          <li class="col1"><h4>Southbound</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">&nbsp; 4</li>
-          <li class="col1-2">Cottage Grove</li>
-          <li class="col1"><span class="red">Out Of Service until 12:10 AM</span></li>       
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-      <ul class="container2">
+          <li class="busnumber"><h1>4</h1></li>
+          <li class="col1-2"><h3>Cottage Grove</h3></li>
+          <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">&nbsp;20</li>
-          <li class="col1-2">Madison</li>
-          <li class="col1"><span class="red">Out Of Service until 12:10 AM</span></li>
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-       <ul class="container2">
+          <li class="busnumber"><h1>20</h1></li>
+          <li class="col1-2"><h3>Madison</h3></li>
+          <li class="col1"><h4><Out Of Service until 12:10 AM</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">&nbsp;20</li>
-          <li class="col1-2">Streeterville/Taylor</li>
-          <li class="col1"><span class="red">Out Of Service until 6:00 AM</span></li>
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-      <ul class="container2">
+          <li class="busnumber"><h1>20</h1></li>
+          <li class="col1-2"><h3>Streeterville/Taylor</h3></li>
+          <li class="col1"><h4>Out Of Service until 6:00 AM</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <ul class="container2">
           <li class="shape"></li>
-          <li class="busnumber">&nbsp;6x</li>
-          <li class="col1-2">Jackson Park Express</li>
-          <li class="col1">Rerouted</li>
-      </ul>
-          <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
-    </body>
-</html>
+          <li class="busnumber"><h1>6x</h1></li>
+          <li class="col1-2"><h3>Jackson Park Express</h3></li>
+          <li class="col1"><h4>Rerouted</h4></li>
+        </ul>
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        </body>
+      </html>
