--- a/index.html
+++ b/index.html
@@ -27,60 +27,52 @@
       </nav>
       <section class="bus-list">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>60</h1></li>
           <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
           <li class="col1"><h4>Eastbound</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>124</h1></li>
           <li class="col1-2"><h3>Navy Pier</h3></li>
           <li class="col1"><h4>Eastbound/Southbound</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>151</h1></li>
           <li class="col1-2"><h3>Devon/Clark</h3></li>
           <li class="col1"><h4>Northbound</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>J14</h1></li>
           <li class="col1-2"><h3>103rd/Stony Island</h3></li>
           <li class="col1"><h4>Southbound</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>4</h1></li>
           <li class="col1-2"><h3>Cottage Grove</h3></li>
           <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>20</h1></li>
           <li class="col1-2"><h3>Madison</h3></li>
           <li class="col1"><h4><Out Of Service until 12:10 AM</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>20</h1></li>
           <li class="col1-2"><h3>Streeterville/Taylor</h3></li>
           <li class="col1"><h4>Out Of Service until 6:00 AM</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
-          <li class="shape"></li>
           <li class="busnumber"><h1>6x</h1></li>
           <li class="col1-2"><h3>Jackson Park Express</h3></li>
           <li class="col1"><h4>Rerouted</h4></li>
         </ul>
-        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png" alt="forward chevron for more options">
+        <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         </body>
       </html>
