--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="container2">
           <li class="busnumber"><h1>20</h1></li>
           <li class="col1-2"><h3>Madison</h3></li>
-          <li class="col1"><h4><Out Of Service until 12:10 AM</h4></li>
+          <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
