--- a/index.html
+++ b/index.html
@@ -30,24 +30,28 @@
           <li class="busnumber"><h1>60</h1></li>
           <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
           <li class="col1"><h4>Eastbound</h4></li>
+          <li class="col2"><h2>20</h2><h4>mins</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
           <li class="busnumber"><h1>124</h1></li>
           <li class="col1-2"><h3>Navy Pier</h3></li>
           <li class="col1"><h4>Eastbound/Southbound</h4></li>
+          <li class="col2"><h2>10</h2><h4>mins</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
           <li class="busnumber"><h1>151</h1></li>
           <li class="col1-2"><h3>Devon/Clark</h3></li>
           <li class="col1"><h4>Northbound</h4></li>
+          <li class="col2"><h2>16</h2><h4>mins</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
           <li class="busnumber"><h1>J14</h1></li>
           <li class="col1-2"><h3>103rd/Stony Island</h3></li>
           <li class="col1"><h4>Southbound</h4></li>
+          <li class="col2"><h2>15</h2><h4>mins</h4></li>
         </ul>
         <img class="forwardarrow" src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Arrow%20Right.png">
         <ul class="container2">
