--- a/index.html
+++ b/index.html
@@ -7,28 +7,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
-    <header>
-      <nav>
-        <div class="statusbar">
-          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Status%20Bar.png">
-        </div>
-        <div class="back-arrow">
-          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Back%20Button.png">
-        </div>
+    <header class="statusbar"> </header>
+      <nav class="back-arrow">
         <div class="map">
-          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/Washington%20and%20State%203.png">
         </div>
       </nav>
-    </header>
     <section class="container">
-      <nav>
         <div class="segmented-controls">
-          <img src="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/2%20Segments.png">
-          <h6>Stops</h6>
-          <h6>Lines</h6>
+          <span class="segmented-left-control"><h6>Stops</h6></span>
+          <span class="segmented-right-control"><h6>Lines</h6></span>
         </div>
-      </nav>
-      <section class="bus-list">
         <ul class="container2">
           <li class="busnumber"><h1>60</h1></li>
           <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
