Add back button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
   <body>
     <img class="statusbar" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Status%20Bar.png"/>
-      <nav class="back-arrow">
-        <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
-      </nav>
+    <nav>
+      <img class="back-arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Back%20Button.png"/>
+      <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
+    </nav>
     <section class="container">
         <div class="segmented-controls">
           <span class="segmented-left-control"><h6>Stops</h6></span>
