Add segmented controls

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
     </nav>
     <section class="container">
-        <div class="segmented-controls">
+        <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/2%20Segments.png"/>
           <span class="segmented-left-control"><h6>Stops</h6></span>
           <span class="segmented-right-control"><h6>Lines</h6></span>
-        </div>
         <ul class="container2">
           <li class="busnumber"><h1>60</h1></li>
           <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
