--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
     </nav>
     <section class="container">
-        <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/2%20Segments.png"/>
+        <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Segmented%20Controls.png"/>
           <span class="segmented-left-control"><h6>Stops</h6></span>
           <span class="segmented-right-control"><h6>Lines</h6></span>
         <ul class="container2">
