--- a/index.html
+++ b/index.html
@@ -11,60 +11,50 @@
     <img class="back-arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Back%20Button.png"/>
     <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
     <section class="container">
-        <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Segmented%20Controls.png"/>
-          <span class="segmented-left-control"><h6>Stops</h6></span>
-          <span class="segmented-right-control"><h6>Lines</h6></span>
-        <ul class="container2">
-          <li class="busnumber"><h1>60</h1></li>
-          <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
-          <li class="col1"><h4>Eastbound</h4></li>
-          <li class="col2"><h2>20</h2><h4>mins</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>124</h1></li>
-          <li class="col1-2"><h3>Navy Pier</h3></li>
-          <li class="col1"><h4>Eastbound/Southbound</h4></li>
-          <li class="col2"><h2>10</h2><h4>mins</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>151</h1></li>
-          <li class="col1-2"><h3>Devon/Clark</h3></li>
-          <li class="col1"><h4>Northbound</h4></li>
-          <li class="col2"><h2>16</h2><h4>mins</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>J14</h1></li>
-          <li class="col1-2"><h3>103rd/Stony Island</h3></li>
-          <li class="col1"><h4>Southbound</h4></li>
-          <li class="col2"><h2>15</h2><h4>mins</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>4</h1></li>
-          <li class="col1-2"><h3>Cottage Grove</h3></li>
-          <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>20</h1></li>
-          <li class="col1-2"><h3>Madison</h3></li>
-          <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>20</h1></li>
-          <li class="col1-2"><h3>Streeterville/Taylor</h3></li>
-          <li class="col1"><h4>Out Of Service until 6:00 AM</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <ul class="container2">
-          <li class="busnumber"><h1>6x</h1></li>
-          <li class="col1-2"><h3>Jackson Park Express</h3></li>
-          <li class="col1"><h4>Rerouted</h4></li>
-        </ul>
-        <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        </body>
-      </html>
+      <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Segmented%20Controls.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>60</h1></li>
+        <li class="col1-2"><h3>Randolph/Harbor Dr</h3></li>
+        <li class="col1"><h4>Eastbound</h4></li>
+        <li class="col2"><h2>20</h2><h4>mins</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>124</h1></li>
+        <li class="col1-2"><h3>Navy Pier</h3></li>
+        <li class="col1"><h4>Eastbound/Southbound</h4></li>
+        <li class="col2"><h2>10</h2><h4>mins</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>151</h1></li>
+        <li class="col1-2"><h3>Devon/Clark</h3></li>
+        <li class="col1"><h4>Northbound</h4></li>
+        <li class="col2"><h2>16</h2><h4>mins</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>J14</h1></li>
+        <li class="col1-2"><h3>103rd/Stony Island</h3></li>
+        <li class="col1"><h4>Southbound</h4></li>
+        <li class="col2"><h2>15</h2><h4>mins</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>4</h1></li>
+        <li class="col1-2"><h3>Cottage Grove</h3></li>
+        <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>20</h1></li>
+        <li class="col1-2"><h3>Madison</h3></li>
+        <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>20</h1></li>
+        <li class="col1-2"><h3>Streeterville/Taylor</h3></li>
+        <li class="col1"><h4>Out Of Service until 6:00 AM</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      <ul class="container2">
+        <li class="busnumber"><h1>6x</h1></li>
+        <li class="col1-2"><h3>Jackson Park Express</h3></li>
+        <li class="col1"><h4>Rerouted</h4></li>
+      </ul> <img src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+      </body> 
+    </html>
