--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <img class="statusbar" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Status%20Bar.png"/>
     <img class="map" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Washington%20and%20State%203.png"/>
+    <img class="button" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Back%20Button.png"/>
     <section class="container">
       <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Segmented%20Controls.png"/>
       <ul class="container2">
