--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>BusyBus Line List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
 </head>
   <body>
     <img class="statusbar" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Status%20Bar.png"/>
