Update h4 and remove eta

--- a/index.html
+++ b/index.html
@@ -18,52 +18,48 @@
         <h3 class="col1-2">Randolph/Harbor Dr</h3>
         <h4 class="col1"><Eastbound</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col2"><h2>20</h2><h4>mins</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">124</h1>
         <h3 class="col1-2">Navy Pier</h3>
         <h4 class="col1">Eastbound/Southbound</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col2"><h2>10</h2><h4>mins</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">151</h1>
         <h3 class="col1-2">Devon/Clark</h3>
         <h4 class="col1">Northbound</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col2"><h2>16</h2><h4>mins</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">J14</h1>
         <h3 class="col1-2">103rd/Stony Island</h3>
         <h4 class="col1">Southbound</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col2"><h2>15</h2><h4>mins</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">4</h1>
         <h3 class="col1-2">Cottage Grove</h3>
+        <h4 class="col1">Out Of Service until 12:10 AM</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">20</h1>
         <h3 class="col1-2">Madison</h3>
+        <h4 class="col1">Out Of Service until 12:10 AM</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col1"><h4>Out Of Service until 12:10 AM</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">20</h1>
         <h3 class="col1-2">Streeterville/Taylor</h3>
+        <h4 class="col1">Out Of Service until 6:00 AM</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col1"><h4>Out Of Service until 6:00 AM</h4></li>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">6x</h1>
         <h3 class="col1-2">Jackson Park Express</h3>
+        <h4 class="col1">Rerouted</h4>
         <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
-        <li class="col1"><h4>Rerouted</h4></li>
           </ul>
       </body> 
     </html>
