--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img class="segmented-controls" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Segmented%20Controls.png"/>
       <ul class="container2">
         <h1 class="busnumber">60</h1>
-        <h3 class="col1-2">Randolph/Harbor Dr</h3>
-        <h4 class="col1">Eastbound</h4>
+        <h3 class="busline">Randolph/Harbor Dr</h3>
+        <h4 class="subtitle">Eastbound</h4>
         <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
