--- a/index.html
+++ b/index.html
@@ -17,24 +17,32 @@
         <h1 class="busnumber">60</h1>
         <h3 class="busline">Randolph/Harbor Dr</h3>
         <h4 class="subtitle">Eastbound</h4>
+        <h3 class="time">20</h3>
+        <h4 class="minutes">mins</h4>
         <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">124</h1>
         <h3 class="busline">Navy Pier</h3>
         <h4 class="subtitle">Eastbound/Southbound</h4>
+        <h3 class="time">10</h3>
+        <h4 class="minutes">mins</h4>
         <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">151</h1>
         <h3 class="busline">Devon/Clark</h3>
-        <h4 class="subtitle">Northbound</h4>
+        <h4 class="subtitle">Northbound</h4>         
+        <h3 class="time">16</h3>
+        <h4 class="minutes">mins</h4>
         <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">J14</h1>
         <h3 class="busline">103rd/Stony Island</h3>
-        <h4 class="subtitle">Southbound</h4>
+        <h4 class="subtitle">Southbound</h4>         
+        <h3 class="time">15</h3>
+        <h4 class="minutes">mins</h4>
         <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
