Edit css file links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>BusyBus Line List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/reset.css">
+  <link rel="stylesheet" href="https://github.com/mehmadrid414/Frontend_Challenge/blob/master/style.css">
 </head>
   <body>
     <img class="statusbar" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Status%20Bar.png"/>
