--- a/index.html
+++ b/index.html
@@ -1,73 +1,106 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>BusyBus Line List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
   <body>
-    <link class="statusbar" href="Status Bar.png">
-    <link class="map" href="Washington and State 3.png">
-    <link class"button" href="Back Button.png">
     <section class="container">
-      <link class="segmented-controls" href="Segmented Controls.png">
-      <ul class="container2">
-        <li><h1 class="busnumber">124</h1></li>
-        <li><h3 class="busline">Navy Pier</h3></li>
-        <li><h4 class="subtitle">Eastbound/Southbound</h4></li>
-        <li><h3 class="time">10</h3></li>
-        <li><h4 class="minutes">mins</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">J14</h1></li>
-        <li><h3 class="busline">103rd/Stony Island</h3></li>
-        <li><h4 class="subtitle">Southbound</h4></li>         
-        <li><h3 class="time">15</h3></li>
-        <li><h4 class="minutes">mins</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">151</h1></li>
-        <li><h3 class="busline">Devon/Clark</h3></li>
-        <li><h4 class="subtitle">Northbound</h4></li>         
-        <li><h3 class="time">16</h3></li>
-        <li><h4 class="minutes">mins</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">60</h1></li>
-        <li><h3 class="busline">Randolph/Harbor Dr</h3></li>
-        <li><h4 class="subtitle">Eastbound</h4></li>
-        <li><h3 class="time">20</h3></li>
-        <li><h4 class="minutes">mins</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">4</h1></li>
-        <li><h3 class="busline">Cottage Grove</h3></li>
-        <li><h4 class="subtitle">Out Of Service until 12:10 AM</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">20</h1></li>
-        <li><h3 class="busline">Madison</h3></li>
-        <li><h4 class="subtitle">Out Of Service until 12:10 AM</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">157</h1></li>
-        <li><h3 class="busline">Streeterville/Taylor</h3></li>
-        <li><h4 class="subtitle">Out Of Service until 6:00 AM</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
-      <ul class="container2">
-        <li><h1 class="busnumber">6x</h1></li>
-        <li><h3 class="busline">Jackson Park Express</h3></li>
-        <li><h4 class="subtitle">Rerouted</h4></li>
-        <li><link class="arrow" href="Arrow Right.png"></li>
-      </ul>
+      <div class="statusbar">
+        <img src="Status Bar.png">
+      </div>
+      <div class="map">
+        <img src="Washington and State3.png">
+      </div>
+      <div class="backbutton">
+        <img src="Back Button.png">
+      </div>
+    <section class="menu">
+      <div class="segmentedcontrols">
+        <img src="Segmented Controls.png">
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">124</h1>
+        <div class="content">
+        <h3 class="busline">Navy Pier</h3>
+        <h4 class="subtitle">Eastbound/Southbound</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">J14</h1>
+        <div class="content">
+        <h3 class="busline">103rd/Stony Island</h3>
+        <h4 class="subtitle">Southbound</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">151</h1>
+        <div class="content">
+        <h3 class="busline">Devon/Clark</h3>
+        <h4 class="subtitle">Northbound</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">60</h1>
+        <div class="content">
+        <h3 class="busline">Randolph/Harbor Dr</h3>
+        <h4 class="subtitle">Eastbound</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">4</h1>
+        <div class="content">
+        <h3 class="busline">Cottage Grove</h3>
+        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">20</h1>
+        <div class="content">
+        <h3 class="busline">Madison</h3>
+        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">157</h1>
+        <div class="content">
+        <h3 class="busline">Streeterville/Taylor</h3>
+        <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
+      <div class="bus">
+        <h1 class="busnumber">6x</h1>
+        <div class="content">
+        <h3 class="busline">Jackson Park Express</h3>
+        <h4 class="subtitle">Rerouted</h4>
+        </div>
+        <div class="arrowright">
+          <img src="Arrow Right.png">
+        </div>
+      </div>
       </body> 
     </html>
