--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <h1 class="busnumber">124</h1>
         <div class="content">
         <h3 class="busline">Navy Pier</h3>
-        <h4 class="subtitle">Eastbound/Southbound</h4>
+        <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
+        </div>
+        <div>
+          <h4 class="time">5:10 PM</h4>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
@@ -36,7 +39,10 @@
         <h1 class="busnumber">J14</h1>
         <div class="content">
         <h3 class="busline">103rd/Stony Island</h3>
-        <h4 class="subtitle">Southbound</h4>
+        <h4 class="subtitle">South - Arriving every 15 mins</h4>
+        </div>
+        <div>
+          <h4 class="time">5:15 PM</h4>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
@@ -46,7 +52,10 @@
         <h1 class="busnumber">151</h1>
         <div class="content">
         <h3 class="busline">Devon/Clark</h3>
-        <h4 class="subtitle">Northbound</h4>
+        <h4 class="subtitle">North - Arriving every 16 mins</h4>
+        </div>
+        <div>
+          <h4 class="time">5:16 PM</h4>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
@@ -56,7 +65,10 @@
         <h1 class="busnumber">60</h1>
         <div class="content">
         <h3 class="busline">Randolph/Harbor Dr</h3>
-        <h4 class="subtitle">Eastbound</h4>
+        <h4 class="subtitle">East - Arriving every 20 mins</h4>
+        </div>
+        <div>
+          <h4 class="time">5:20 PM</h4>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
@@ -68,7 +80,7 @@
         <h3 class="busline">Cottage Grove</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
         </div>
-        <div class="arrowright">
+        <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -78,7 +90,7 @@
         <h3 class="busline">Madison</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
         </div>
-        <div class="arrowright">
+        <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -88,7 +100,7 @@
         <h3 class="busline">Streeterville/Taylor</h3>
         <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
         </div>
-        <div class="arrowright">
+        <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -98,7 +110,7 @@
         <h3 class="busline">Jackson Park Express</h3>
         <h4 class="subtitle">Rerouted</h4>
         </div>
-        <div class="arrowright">
+        <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
