--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h3 class="busline">Cottage Grove</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
         </div>
-        <div class="arrowright1">
+        <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -90,7 +90,7 @@
         <h3 class="busline">Madison</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
         </div>
-        <div class="arrowright1">
+        <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -100,7 +100,7 @@
         <h3 class="busline">Streeterville/Taylor</h3>
         <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
         </div>
-        <div class="arrowright1">
+        <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
@@ -110,7 +110,7 @@
         <h3 class="busline">Jackson Park Express</h3>
         <h4 class="subtitle">Rerouted</h4>
         </div>
-        <div class="arrowright1">
+        <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
