--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     <section class="menu">
       <div class="segmentedcontrols">
-        <img src="Segmented Controls.png">
+        <a href="lines.html><img src="Segmented Controls.png"></a>
       </div>
       <div class="bus">
         <h1 class="busnumber">124</h1>
