--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         <img src="Back Button.png">
       </div>
     <section class="menu">
-      <div class="segmentedcontrols">
-        <img src="Segmented Controls.png">
+      <div class="segmentedcontrols-col1">
+        <a href="stops.html">Stops</a>
+      </div>
+      <div class="segmentedcontrols-col2">
+        <a href="lines.html">Lines</a>
       </div>
       <div class="bus">
         <h1 class="busnumber">124</h1>
