--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="stops.html">Stops</a>
       </div>
       <div class="segmentedcontrols-col2">
-        <a href="lines.html">Lines</a>
+        <a href="index.html">Lines</a>
       </div>
       <div class="bus">
         <h1 class="busnumber">124</h1>
