--- a/stops.html
+++ b/stops.html
@@ -26,92 +26,64 @@
         <a href="index.html">Lines</a>
       </div>
       <div class="bus">
-        <h1 class="busnumber">124</h1>
         <div class="content">
-        <h3 class="busline">Navy Pier</h3>
-        <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
-        </div>
-        <div>
-          <h4 class="time">5:10 PM</h4>
+        <h3 class="busline">Washington and State</h3>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">J14</h1>
         <div class="content">
-        <h3 class="busline">103rd/Stony Island</h3>
-        <h4 class="subtitle">South - Arriving every 15 mins</h4>
-        </div>
-        <div>
-          <h4 class="time">5:15 PM</h4>
+        <h3 class="busline">State and Washington</h3>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">151</h1>
         <div class="content">
-        <h3 class="busline">Devon/Clark</h3>
-        <h4 class="subtitle">North - Arriving every 16 mins</h4>
-        </div>
-        <div>
-          <h4 class="time">5:16 PM</h4>
+        <h3 class="busline">Dearborn and Madison</h3>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">60</h1>
         <div class="content">
-        <h3 class="busline">Randolph/Harbor Dr</h3>
-        <h4 class="subtitle">East - Arriving every 20 mins</h4>
-        </div>
-        <div>
-          <h4 class="time">5:20 PM</h4>
+        <h3 class="busline">State and Randolph</h3>
         </div>
         <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">4</h1>
         <div class="content">
-        <h3 class="busline">Cottage Grove</h3>
-        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        <h3 class="busline">Madison and State</h3>
         </div>
         <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">20</h1>
         <div class="content">
-        <h3 class="busline">Madison</h3>
-        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        <h3 class="busline">State and Madison</h3>
         </div>
         <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">157</h1>
         <div class="content">
-        <h3 class="busline">Streeterville/Taylor</h3>
-        <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
+        <h3 class="busline">Washington & Clark/Dearborn</h3>
         </div>
         <div class="arrowright1">
           <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
-        <h1 class="busnumber">6x</h1>
         <div class="content">
-        <h3 class="busline">Jackson Park Express</h3>
-        <h4 class="subtitle">Rerouted</h4>
+        <h3 class="busline">Madison and Clark</h3>
         </div>
         <div class="arrowright1">
           <img src="Arrow Right.png">
