--- a/stops.html
+++ b/stops.html
@@ -30,7 +30,7 @@
         <h3 class="busline">Washington and State</h3>
         </div>
         <div class="arrowright">
-          <img src="Arrow Right.png">
+          <a href="arrivals.html"><img src="Arrow Right.png"></a>
         </div>
       </div>
       <div class="bus">
