--- a/stops.html
+++ b/stops.html
@@ -23,7 +23,7 @@
         <a href="stops.html">Stops</a>
       </div>
       <div class="segmentedcontrols-col2">
-        <a href="index.html">Lines</a>
+        <a href="lines.html">Lines</a>
       </div>
       <div class="bus">
         <div class="content">
