--- a/stops.html
+++ b/stops.html
@@ -16,7 +16,7 @@
         <img src="Washington and State 3.png">
       </div>
       <div class="backbutton">
-        <img src="Back Button.png">
+        <a href="index.html"><img src="Back Button.png"></a>
       </div>
     <section class="menu">
       <div class="segmentedcontrols-col1">
